Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Databaseui by jjliang</title>
+    <title>Foodweb Builder by jjliang</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Databaseui</h1>
-        <h2>Kelp forest species interactions database interface</h2>
+        <h1>Foodweb Builder</h1>
+        <h2>A species interactions database interface</h2>
         <a href="https://github.com/jjliang/databaseui" class="button"><small>View project on</small>GitHub</a>
       </div>
     </header>
